--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,18 @@
       <version>7.2.3</version>
     </dependency>
 
+    <dependency>
+      <groupId>io.cucumber</groupId>
+      <artifactId>cucumber-java</artifactId>
+      <version>7.14.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.cucumber</groupId>
+      <artifactId>cucumber-testng</artifactId>
+      <version>7.14.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
